Add ArtConvert logo and update branding

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <title>ArtConvert - Transform Images into Text Art</title>
+    <meta key="title" content="ArtConvert - Transform Images into Text Art" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Create beautiful ASCII, Alphanumeric, or Binary art from your images. Free, fast, and private."
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Create beautiful ASCII, Alphanumeric, or Binary art from your images. Free, fast, and private."
       name="description"
     />
     <meta
